gas/ 	PR gas/12915 	* config/tc-mips.c (append_insn): Only consider hazards between the 	pre-noreorder block and ip.

gas/testsuite/
	* gas/mips/pr12915.s, gas/mips/pr12915.d: New test.
	* gas/mips/mips.exp: Run it.